# SRR_FEGBA

./: .FE6_Installer.event  .FE7_Installer.event  .FE8_FebuilderSkillsys2020ish.event  .FE8_FebuilderSkillsys2020ishNoStrMag.event  .FE8_FebuilderSkillsys2021_or_later_Installer.event  .FE8_FebuilderSkillsys20220703_Installer.event  .FE8_FebuilderWithSkillsys_Installer.event  .FE8_Installer.event  .FE8_WithSkillsys_Installer.event  .gitattributes  .gitignore  AsmHooks.asm  AsmHooks.lyn.event  AssembleAsmFEgba.bat  AssembleLyn.bat  C_code.c  C_code.h  C_code.lyn.event  Definitions - Copy.event  Definitions.event  Definitions.s  Fire Emblem - Blazing Blade Self Randomizer (Test).srm  FixMugs_FE8.event  Installer.event  MAKE_CharTables.cmd  MAKE_HACK.cmd  MAKE_Text.cmd  MAKE_animscache.cmd  MAKE_animscache_fe8only.cmd  MAKE_copyintoanimscache.cmd  MAKE_fe6.cmd  MAKE_fe7.cmd  MAKE_fe7cache.cmd  MAKE_fe8.cmd  MAKE_fe8_cskillsys.cmd  MakeAsmFEgba.bat  MakeTables.bat  Make_C.bat  Make_C_fe8.bat  Make_C_fe8_broken.bat  (+25 more)
EventAssembler/: fe6_test.event  fe6_tr.tbl
HackInstallers/: .A_Test_Install.event  .Build.cmd  .Build_with_sym.cmd  .Build_with_sym_one.cmd  BlessedHeart.event  BurdenedCrown.event  C_Skillsys.event  CelestarisBk1.event  CotBK.event  DarkAmulet.event  DarkStone.event  DragonHerald.event  Eckesachs.event  ElysiumAblaze.event  Emulation Theory.ups  EmulationTheory.event  (+38 more)
Patches/FE8/GORGON-EGG-v1.0.0-alpha/tools/shadowshot/: .gitignore  Cargo.toml  Makefile  README.md
Patches/FE8/GORGON-EGG-v1.0.0-alpha/tools/shadowshot/src/: config.rs  main.rs  module.rs
(+13270 files in other folders)
