[package]
name = "shadowshot"
description = "The GORGON-EGG config parser"
license = "MIT"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
anyhow = "1.0.98"
glob = "0.3.2"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
semver = "1.0"
dircpy = "0.3.19"
typed-path = "0.11"
serde_with = "3.14.0"
ordered_hash_map = "0.5.0"
